--- a/sections/benchmarks.tex
+++ b/sections/benchmarks.tex
@@ -186,7 +186,7 @@ We conclude that the key generation time is no longer a bottleneck for practical
 
 \subsubsection{One Aggregate Signature under the Microscope.}
 
-\mbox{}\gnote{Needs rewriting and updating the actual numbers one optimization was run}.
+\mbox{}\gnote{Needs rewriting and updating the actual numbers once optimization was run}.
 
 To better understand the size of Chipmunk aggregate signatures, we also inspected the sizes of the aggregate signature's individual components.
 For the sake of concreteness, let us just consider $\tau=21$ and $\rho=1024$.
